Formalized Typographic scale and p, header margins

--- a/origin.html
+++ b/origin.html
@@ -92,8 +92,6 @@
         <article>
           <section>
             <h2 id="intro">Introduction</h2>
-            <p>It was Christmas Eve, and I had taken the opportunity of a free night in the seasonal window to spend time with some mates — a brief respite from the obligatory yet pleasant series of family feasts.</p>
-            <p>Towards the end of the night, all of us well lubricated, the discussion turned to questions of feminism after a vaguely anachronistic encounter between a father of one of us and a waiter serving our laksa. This, in turn, led to me suggesting that the issue of ‘women on boards’ was not really one meriting our attention, which would be better focused on issues that support women who are not so wealthy and comfortable as to be in the running for positions on corporate boards. Surely it’s more pressing that a single mum in Doveton or Orange or Uralla or Carole Park could go to the doctor or put their kid into a decent school, rather than concerning ourselves with whether Gail Kelly is struggling to line up a cushy post-Westpac gig?</p>
             <p>Tufte CSS provides tools to style web articles using the ideas demonstrated by Edward Tufte’s books and handouts. Tufte’s style is known for its simplicity, extensive use of sidenotes, tight integration of graphics with text, and carefully chosen typography.</p>
             <p>Tufte CSS was created by <a href="http://www.daveliepmann.com">Dave Liepmann</a> and is now an Edward Tufte project. The original idea was cribbed from <a href="https://tufte-latex.github.io/tufte-latex/">Tufte-<span class="latex">L<span class="latex-sup">a</span>T<span class="latex-sub">e</span>X</span></a> and <a href="http://rmarkdown.rstudio.com/tufte_handout_format.html">R Markdown’s Tufte Handout format</a>. We give hearty thanks to all the people who have contributed to those projects.</p>
             <p>If you see anything that Tufte CSS could improve, we welcome your contribution in the form of an issue or pull request on the GitHub project: <a href="https://github.com/edwardtufte/tufte-css">tufte-css</a>. Please note the <a href="https://github.com/edwardtufte/tufte-css#contributing">contribution guidelines</a>.</p>
@@ -141,7 +139,10 @@
                 <p>For a successful technology, reality must take precedence over public relations, for Nature cannot be fooled.</p>
                 <footer>Richard P. Feynman, <cite>“What Do You Care What Other People Think?”</cite></footer>
               </blockquote>
-              <blockquote>I do not paint things, I paint only the differences between things.<footer>Henri Matisse, <cite>Henri Matisse Dessins: thèmes et variations</cite> (Paris, 1943), 37</footer></blockquote>
+              <blockquote>
+                  <p>I do not paint things, I paint only the differences between things.</p>
+                  <footer>Henri Matisse, <cite>Henri Matisse Dessins: thèmes et variations</cite> (Paris, 1943), 37</footer>
+              </blockquote>
             </div>
             <p>If you’d like to introduce your page or a section of your page with some quotes, use epigraphs. Modeled after chapter epigraphs in Tufte’s books (particularly <em>Beautiful Evidence</em>), these are <code>blockquote</code> elements with a bit of specialized styling. Quoted text is italicized. The source goes in a <code>footer</code> element inside the <code>blockquote</code>. We have provided three examples in the epigraph of this section, demonstrating shorter and longer quotes, with and without a paragraph tag, and showing how multiple quotes within an epigraph fit together with the use of a wrapper class.</p>
           </section>
