Responsive on ipad and ipad pro

--- a/origin.html
+++ b/origin.html
@@ -56,7 +56,7 @@
         
         <div class="container-fluid home-project-cover" style="background-color:#293E68;">
             <div class="row">
-                <div class="col-sm-4 home-project-left">
+                <div class="col-md-4 home-project-left">
                     <h4 class="home-project-title">Latitude 90 - the origin</h4>
                     <h3 class="home-project-subtitle">First of it's kind, mobile-social hybrid deduction game</h3>
                     <p class="home-project-blurb">
@@ -66,7 +66,7 @@
                     <h6 class="home-project-tags">research, redesign</h6>
                     <p class="home-project-blurb">Sep '15 - Dec '15</p>
                 </div>
-                <div class="col-sm-8 home-project-right">
+                <div class="col-md-8 home-project-right">
                     <img src="http://placehold.it/1500x925" class="center-image">
                 </div>
             </div>
