Finished Origin work page

--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
                 <p>Gaming company <a href="http://www.ghostroadhouse.com/">Ghost roadhouse</a> wanted us to redesign their game Latitude 90 for iOS. Latitude 90 is a first of it's kind hybrid mobile-social deduction game similar to werewolf and mafia. Client received addititional funding from Kickstarter due to this redesign.</p>
                 <h6 class="home-project-tags">research, redesign</h6>
                 <p>Sep '15 - Dec '15</p>                
-                <div class="view-case-study0"><span class="view-case-study"><a href="#">View case study</a></span></div>
+                <div class="view-case-study0"><span class="view-case-study"><a href="origin.html">View case study</a></span></div>
             </div>
-            <div class="col-sm-8 project-banner-setting"><img class="img-fluid" src="img/origin_banner_resized_3.png"></div>
+            <div class="col-sm-8 project-banner-setting"><a href="origin.html"><img class="img-fluid" src="img/origin_banner_resized_3.png"></a></div>
         </div>
         
         
