narrowed column layout

--- a/origin.html
+++ b/origin.html
@@ -82,7 +82,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <p>
-                        <a class="navbar-brand" href="#">Home</a>
+                        <a class="navbar-brand" href="index.html">Home</a>
                         <span class="navbar-brand">/</span>
                         <span class="navbar-brand navbar-brand-currentpage">Latitude 90 - Origin</span>
                     </p>
@@ -170,7 +170,7 @@
                     </p>
                 </section>
                 
-                <section>
+                <section class="light">
                     <h2 id="approach">Approach</h2>
                     <p>
                         I suggested that we divide 12 weeks into <b>6 sprints of 2 weeks each</b> as that minimizes administrative overhead and allows us to track progress effectively. We <b>did the following steps in the 6 sprints</b> and each week we would produce a report documenting our progress, findings and results in that sprint.
