Wrote till Personas for instapark

--- a/instapark.html
+++ b/instapark.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sample title</title>
+    <title>Instapark</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <script src="https://use.typekit.net/tpy0zci.js"></script>
@@ -92,7 +92,140 @@
       <div class="row">
         <article class="nobottompadding">
           <section>
-            <h1>Making of Portfolio website</h1>
+            <h1>Making of Instapark</h1>
+            <p class="subtitle">Convenient parking solution for universities</p>
+            <p>
+              <label class="margin-toggle" for="mn-figure-1">&#8853;</label>
+              <input class="margin-toggle" type="checkbox" id="mn-figure-1"><span class="marginnote">Talking to friends at other universities, I found out that this issue exists elsewhere as well. For this project I restricted the target audience to University of Michigan community.                        </span>
+            </p>
+            <p>Parking is a problem at University of Michigan. During class hours, students and faculty find it hard to find parking inside the campus. Fortunately, however, parking spots do exist &mdash; it is just hard to find them. </p>
+            <p>Add to that, the prices of parking spots vary by place and time of day. This problem is amplified during Michigan events when everybody wants to for example, park close to the stadium. Students who are usually running short on cash have a tough time finding parking. Here too, students are willing to rent out their personal parking spots for additional money during events. </p>
+            <p>Unfortunately, no application exists to solve these problems. As a student, I was myself frustrated by these problems and thought of building an application to address these needs.</p>
+            <h2>Process</h2>
+            <h3>Methodology</h3>
+            <p>For this project, I followed the <strong>participatory design methodology</strong>. This was feasible since I had ready access to student and faculty to participate in design sessions.</p>
+            <p>I also conducted small user focus groups to collect enough data points for backing up my research, used surveys to understand user's needs, behaviors and attitudes and did concept ranking to prioritize app features. </p>
+            <p>I also engaged the user in preliminary prototyping, mockups and wireframing in order to understand the user's wants and needs accurately.</p>
+            <p>This proved to be extremely useful because there were many discoveries along the way and I had to adjust the product feature set along the way.</p>
+            <h3>Deliverables and Roadmap</h3>
+            <p>I wanted to be thoroughly grounded in research, but I also wanted to iterate quickly and produce deliverables to track and show progress. To that end, I prepared following roadmap. </p>
+            <p>I executed it properly and finished on time.</p>
+          </section>
+        </article>
+      </div>
+    </div>
+    <div class="container-fluid showcase">
+      <div class="row"><a href="img/w_instapark/approach.png" target="_blank"><img class="img-responsive" src="img/w_instapark/approach.png" style="margin:0 auto" title="Click to see enlarged image"/></a>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <article class="nobottompadding">
+          <section>
+            <h3>Discoveries and course corrections &mdash; yes, of course!</h3>
+            <p>
+              <label class="margin-toggle" for="mn-figure-2">&#8853;</label>
+              <input class="margin-toggle" type="checkbox" id="mn-figure-2"><span class="marginnote">                               <img class="img-responsive" src="img/w_instapark/treasuremap.jpeg"></span>
+            </p>
+            <p>The product design for this product did not follow a linear trajectory. It reminded me so much of treasure hunt cartoons I saw when I was a kid. </p>
+            <p>The initial product focused heavily on late night parking and women safety. However, after more research I found out that that was not the case and price, availability and convenience were important factors. Finding parking for events turned out to be an important ask as well.</p>
+            <p>Because I was iterating quickly through various design artifacts like paper prototypes and low-fis initially, I found it easy to change product direction without much loss of effort.                        </p>
+            <h2>Defining MVP1</h2>
+            <h3>Ideation</h3>
+            <p>I brainstormed couple of different ideas to address the parking problems of students. I sketched them quickly and presented them to stakeholders. Stakeholders provided feedback. This armed me with data to decide what design solution to explore further.</p>
+            <p>I explored 7 different concepts: </p>
+            <ol style="column-count:2; column-gap:3rem">
+              <li>Biking to campus</li>
+              <li>P2P parking marketplace</li>
+              <li>Facilitate street parking</li>
+              <li>Facilitate carpooling, </li>
+              <li>Facilitate usage of public transportation</li>
+              <li>Facilitate park and ride</li>
+              <li>Valet parking app</li>
+            </ol>
+            <figure><a href="img/w_instapark/8concepts.png" target="_blank"><img class="img-responsive" src="img/w_instapark/8concepts.png" title="Click to see enlarged image"/></a>
+            </figure>
+            <h3>Competitive analysis</h3>
+            <p>I did <strong>SWOT</strong> analysis to identify the strengths and weaknesses of competitors. I decided to use the top 3 competitive apps based on the user ratings in the android play store.                        </p>
+          </section>
+        </article>
+      </div>
+    </div>
+    <div class="container-fluid showcase">
+      <div class="row">
+        <div class="col-md-4"><a href="img/w_instapark/c1.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/c1.jpg" title="Click to see enlarged image"/></a>
+        </div>
+        <div class="col-md-4"><a href="img/w_instapark/c2.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/c2.jpg" title="Click to see enlarged image"/></a>
+        </div>
+        <div class="col-md-4"><a href="img/w_instapark/c3.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/c3.jpg" title="Click to see enlarged image"/></a>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <article class="nobottompadding">
+          <section>                   
+            <h3>Differentiators</h3>
+            <ul>
+              <li>None supported navigation integration</li>
+              <li>None provided real-time parking information based on pricing and location. There is at-least 1 parking information web-service that can be used to implement this feature today. e.g. <a href="http://www.parkwhiz.com/developers/">ParkWhiz</a></li>
+              <li>None provided support for events via a P2P marketplace to support the local student community</li>
+            </ul>
+            <h3>MVP1 list = ideation + competitive analysis</h3>
+            <p>Based on the research data collected during ideation and competitive analysis, I narrowed down the MVP1 feature list to provide cheap, real-time street parking and building a P2P parking marketplace.</p>
+            <h3>Storyboarding &mdash; Communicating MVP1 to stakeholders</h3>
+            <p> With the initial features decided, I did storyboarding to prioritize scenarios and explore the experience I would like to provide. I also shared this storyboard with stakeholders and they were able to get a feel of the solution that could be provided by the application.</p>
+          </section>
+        </article>
+      </div>
+    </div>
+    <div class="container-fluid showcase">
+      <div class="row">
+        <div class="col-md-6"><a href="img/w_instapark/story1.png" target="_blank"><img class="img-responsive" src="img/w_instapark/story1.png" title="Click to see enlarged image"/></a>
+        </div>
+        <div class="col-md-6"><a href="img/w_instapark/story2.png" target="_blank"><img class="img-responsive" src="img/w_instapark/story2.png" title="Click to see enlarged image"/></a>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <article class="nobottompadding">
+          <section>
+            <h2>Designing MVP1</h2>
+            <h3>Personas</h3>
+            <p>With the target audience and feature set for MVP1 decided, I created personas capturing the movitation, goals and frustration of my target audience to help me guidance through designing the experience.</p>
+          </section>
+        </article>
+      </div>
+    </div>
+    <div class="container-fluid showcase">
+      <div class="row">
+        <div class="col-md-6"><a href="img/w_instapark/p1.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/p1.jpg" title="Click to see enlarged image"/></a>
+        </div>
+        <div class="col-md-6"><a href="img/w_instapark/p2.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/p2.jpg" title="Click to see enlarged image"/></a>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <article class="nobottompadding">
+          <section>
+            <h3>Paper prototype</h3>
+            <p>I wanted to get a quick round of feedback about the design from my customers and hence I decided to build a paper prototype. I got useful feedback through this method.</p>
+            <div class="videowrapper2">
+              <div class="videoWrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/u2Vou5hSM4g" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </div>
+            <p><strong>Findings</strong></p>
+            <ol>
+              <li>They found the event parking interactions long and confusing. </li>
+              <li>They were not interested in payment through the application.</li>
+            </ol>
+            <p>I addressed these 2 issues in my next iteration</p>
+            <h3>Rigorous evaluation of alternatives</h3>
+            <p>The paper prototype indicated that app's IA and interactions need to be thought out carefully and I decided to take a more rigorous approach to get the information architecture and flow optimized for the use cases.</p>
+            <p>I perused my research findings and came up with a list of design goals (criteria) to help me evaluate various design alternatives.</p>
           </section>
         </article>
       </div>
