--- a/instapark.html
+++ b/instapark.html
@@ -96,11 +96,12 @@
             <p class="subtitle">Convenient parking solution for universities</p>
             <p>
               <label class="margin-toggle" for="mn-figure-1">&#8853;</label>
-              <input class="margin-toggle" type="checkbox" id="mn-figure-1"><span class="marginnote">Talking to friends at other universities, I found out that this issue exists elsewhere as well. For this project I restricted the target audience to University of Michigan community.                        </span>
+              <input class="margin-toggle" type="checkbox" id="mn-figure-1"><span class="marginnote">Talking to friends at other universities, I found out that this issue exists elsewhere as well. For this project I restricted the target audience to University of Michigan community.                        </span><span class="marginnote">Required technology exists to implement a solution.</span>
             </p>
             <p>Parking is a problem at University of Michigan. During class hours, students and faculty find it hard to find parking inside the campus. Fortunately, however, parking spots do exist &mdash; it is just hard to find them. </p>
             <p>Add to that, the prices of parking spots vary by place and time of day. This problem is amplified during Michigan events when everybody wants to for example, park close to the stadium. Students who are usually running short on cash have a tough time finding parking. Here too, students are willing to rent out their personal parking spots for additional money during events. </p>
-            <p>Unfortunately, no application exists to solve these problems. As a student, I was myself frustrated by these problems and thought of building an application to address these needs.</p>
+            <p>Unfortunately, no application exists to solve these problems even when all the technology to implement a solution exists. As a student, I was myself frustrated by these problems and thought of building an application to address these needs.</p>
+            <p>I built a solution to address these needs.</p>
             <h2>Process</h2>
             <h3>Methodology</h3>
             <p>For this project, I followed the <strong>participatory design methodology</strong>. This was feasible since I had ready access to student and faculty to participate in design sessions.</p>
@@ -108,7 +109,7 @@
             <p>I also engaged the user in preliminary prototyping, mockups and wireframing in order to understand the user's wants and needs accurately.</p>
             <p>This proved to be extremely useful because there were many discoveries along the way and I had to adjust the product feature set along the way.</p>
             <h3>Deliverables and Roadmap</h3>
-            <p>I wanted to be thoroughly grounded in research, but I also wanted to iterate quickly and produce deliverables to track and show progress. To that end, I prepared following roadmap. </p>
+            <p>I wanted to be thoroughly grounded in research and also wanted to iterate quickly and produce deliverables to track and show progress. To that end, I prepared following roadmap. </p>
             <p>I executed it properly and finished on time.</p>
           </section>
         </article>
@@ -174,7 +175,7 @@
             <h3>MVP1 list = ideation + competitive analysis</h3>
             <p>Based on the research data collected during ideation and competitive analysis, I narrowed down the MVP1 feature list to provide cheap, real-time street parking and building a P2P parking marketplace.</p>
             <h3>Storyboarding &mdash; Communicating MVP1 to stakeholders</h3>
-            <p> With the initial features decided, I did storyboarding to prioritize scenarios and explore the experience I would like to provide. I also shared this storyboard with stakeholders and they were able to get a feel of the solution that could be provided by the application.</p>
+            <p> With the initial features decided, I did storyboarding to communicate MVP1 with stakeholders and they were able to get a feel of the solution that could be provided by the application.</p>
           </section>
         </article>
       </div>
@@ -225,7 +226,14 @@
             <p>I addressed these 2 issues in my next iteration</p>
             <h3>Rigorous evaluation of alternatives</h3>
             <p>The paper prototype indicated that app's IA and interactions need to be thought out carefully and I decided to take a more rigorous approach to get the information architecture and flow optimized for the use cases.</p>
-            <p>I perused my research findings and came up with a list of design goals (criteria) to help me evaluate various design alternatives.</p>
+            <p>I perused my research findings and came up with a list of <strong>design goals</strong> (criteria) to help me evaluate various design alternatives.</p>
+            <ol>
+              <li>Keep interactions to a minimum</li>
+              <li>Optimize visual design for outdoor conditions</li>
+              <li>Success of seller platform is crucial to finding event parking</li>
+              <li>Help customers become successful sellers on your platform</li>
+              <li>Behave smart and execute recoverable actions</li>
+            </ol>
           </section>
         </article>
       </div>
