Add brainstorming section with images to instapark project page

--- a/instapark.html
+++ b/instapark.html
@@ -234,8 +234,81 @@
               <li>Help customers become successful sellers on your platform</li>
               <li>Behave smart and execute recoverable actions</li>
             </ol>
+            <p>Keeping these design goals in mind, I brainstormed various information architectures for the application as well as various solutions for various screens. e.g. Event display, Displaying search results, Messaging and the main screen</p>
           </section>
         </article>
+      </div>
+    </div>
+    <div class="container-fluid showcase">
+      <div class="row" style="padding-bottom:5%;text-align:center">
+        <h2 class="h2tufte">Evaluate multiple solutions for overall app IA</h2>
+      </div>
+      <div class="row">
+        <div class="card" style="padding:1rem"><a href="img/w_instapark/ia_alternatives.png" target="_blank"><img class="img-responsive" src="img/w_instapark/ia_alternatives.png" title="Click to see enlarged image"/></a>
+          <div class="container-fluid">
+            <div class="row">
+              <h3 class="h3tufte">Overall app IA</h3>
+              <p class="ptufte">How to design IA for overall app? All above design goals considered. 4 solutions evaluated</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row" style="padding-bottom:5%;text-align:center">
+        <h2 class="h2tufte">Evaluate multiple solutions for different tasks.</h2>
+      </div>
+      <div class="row card-row">
+        <div class="col-md-4 card-col">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/br1.jpeg" target="_blank"><img class="img-responsive" src="img/w_instapark/br1.jpeg" title="Click to see enlarged image"/></a>
+            <div class="container-fluid">
+              <div class="row">
+                <h3 class="h3tufte">Screen for find parking - First screen of app</h3>
+                <p class="ptufte">Brainstormed how to show the nearby parking spots available. Factors considered: (1) locating cheapest or closest spot out of N available spots must be easy. (2) Useful spot information must be easy visible (3) Minimize interactions. Did QOC analysis and picked best solution</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 card-col">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/br2.jpeg" target="_blank"><img class="img-responsive" src="img/w_instapark/br2.jpeg" title="Click to see enlarged image"/></a>
+            <div class="container-fluid">
+              <div class="row">
+                <h3 class="h3tufte">Explore various personal renting spots quickly</h3>
+                <p class="ptufte">Brainstormed how to show parking spots available for events. Factors considered: (1) finding cheapest or cloest spot must be easy (2) Minimize interactions (3) Exploring various personal renting spots' information must be super easy</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 card-col">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/br3.jpeg" target="_blank"><img class="img-responsive" src="img/w_instapark/br3.jpeg" title="Click to see enlarged image"/></a>
+            <div class="container-fluid">
+              <div class="row">
+                <h3 class="h3tufte">Designing overall event parking flow</h3>
+                <p class="ptufte">Factors considered: (1) Minimize interactions to request parking (2) Make common and suggested cases very easy (3) Give options to explore deeper if needed.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row card-row">
+        <div class="col-md-4 card-col">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/br4.jpeg" target="_blank"><img class="img-responsive" src="img/w_instapark/br4.jpeg" title="Click to see enlarged image"/></a>
+            <div class="container-fluid">
+              <div class="row">
+                <h3 class="h3tufte">Seler spot management</h3>
+                <p class="ptufte">How does seller manage the spots? Factors considered: (1) Improve engagement. Help the seller price spot correctly. (2) Provide good at-a-glance views so that user is engaged constantly (3) Minimize interactions (4) Optmized for sellers who are selling personal home parking spots first</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 card-col">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/br9.jpeg" target="_blank"><img class="img-responsive" src="img/w_instapark/br9.jpeg" title="Click to see enlarged image"/></a>
+            <div class="container-fluid">
+              <div class="row">
+                <h3 class="h3tufte">Finding parking spots by specifying destination location</h3>
+                <p class="ptufte">How to design for advanced use case wherer user wants to find parking for a different location other than currently placed. Factors considered: (1) Don't make common cases hard. (2) Minimize interactions (3) Don't visually obstruct other useful information</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
