--- a/instapark.html
+++ b/instapark.html
@@ -311,5 +311,21 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <article class="nobottompadding">
+          <section>
+            <h3>Interaction map</h3>
+            <p>Having evaluated various alternatives and selected the best one based on application of design goals, logic and QOC analysis I prepared a wireframe of my entire application capturing all the interactions and design decisions.         </p>
+          </section>
+        </article>
+      </div>
+    </div>
+    <div class="container-fluid showcase">
+      <div class="row">
+        <div class="card" style="padding:1rem"><a href="img/w_instapark/imap1.png" target="_blank"><img class="img-responsive" src="img/w_instapark/imap1.png" title="Click to see enlarged image"/></a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
