fix path in html

--- a/instapark.html
+++ b/instapark.html
@@ -293,7 +293,7 @@
           <div class="card" style="padding:1rem"><a href="img/w_instapark/br4.jpeg" target="_blank"><img class="img-responsive" src="img/w_instapark/br4.jpeg" title="Click to see enlarged image"/></a>
             <div class="container-fluid">
               <div class="row">
-                <h3 class="h3tufte">Seler spot management</h3>
+                <h3 class="h3tufte">Seller spot management</h3>
                 <p class="ptufte">How does seller manage the spots? Factors considered: (1) Improve engagement. Help the seller price spot correctly. (2) Provide good at-a-glance views so that user is engaged constantly (3) Minimize interactions (4) Optmized for sellers who are selling personal home parking spots first</p>
               </div>
             </div>
@@ -323,7 +323,7 @@
     </div>
     <div class="container-fluid showcase">
       <div class="row">
-        <div class="card" style="padding:1rem"><a href="img/w_instapark/imap1.png" target="_blank"><img class="img-responsive" src="img/w_instapark/imap1.png" title="Click to see enlarged image"/></a>
+        <div class="card" style="padding:1rem"><a href="img/w_instapark/imap2.png" target="_blank"><img class="img-responsive" src="img/w_instapark/imap2.png" title="Click to see enlarged image"/></a>
         </div>
       </div>
     </div>
