--- a/instapark.html
+++ b/instapark.html
@@ -116,7 +116,9 @@
       </div>
     </div>
     <div class="container-fluid showcase">
-      <div class="row"><a href="img/w_instapark/approach.png" target="_blank"><img class="img-responsive" src="img/w_instapark/approach.png" style="margin:0 auto" title="Click to see enlarged image"/></a>
+      <div class="row">
+        <div class="card" style="padding:1rem"><a href="img/w_instapark/approach.png" target="_blank"><img class="img-responsive" src="img/w_instapark/approach.png" style="margin:0 auto" title="Click to see enlarged image"/></a>
+        </div>
       </div>
     </div>
     <div class="container">
@@ -144,7 +146,9 @@
               <li>Facilitate park and ride</li>
               <li>Valet parking app</li>
             </ol>
-            <figure><a href="img/w_instapark/8concepts.png" target="_blank"><img class="img-responsive" src="img/w_instapark/8concepts.png" title="Click to see enlarged image"/></a>
+            <figure>
+              <div class="card" style="padding:1rem"><a href="img/w_instapark/8concepts.png" target="_blank"><img class="img-responsive" src="img/w_instapark/8concepts.png" title="Click to see enlarged image"/></a>
+              </div>
             </figure>
             <h3>Competitive analysis</h3>
             <p>I did <strong>SWOT</strong> analysis to identify the strengths and weaknesses of competitors. I decided to use the top 3 competitive apps based on the user ratings in the android play store.                        </p>
@@ -154,11 +158,17 @@
     </div>
     <div class="container-fluid showcase">
       <div class="row">
-        <div class="col-md-4"><a href="img/w_instapark/c1.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/c1.jpg" title="Click to see enlarged image"/></a>
+        <div class="col-md-4">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/c1.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/c1.jpg" title="Click to see enlarged image"/></a>
+          </div>
         </div>
-        <div class="col-md-4"><a href="img/w_instapark/c2.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/c2.jpg" title="Click to see enlarged image"/></a>
+        <div class="col-md-4">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/c2.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/c2.jpg" title="Click to see enlarged image"/></a>
+          </div>
         </div>
-        <div class="col-md-4"><a href="img/w_instapark/c3.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/c3.jpg" title="Click to see enlarged image"/></a>
+        <div class="col-md-4">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/c3.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/c3.jpg" title="Click to see enlarged image"/></a>
+          </div>
         </div>
       </div>
     </div>
@@ -182,9 +192,13 @@
     </div>
     <div class="container-fluid showcase">
       <div class="row">
-        <div class="col-md-6"><a href="img/w_instapark/story1.png" target="_blank"><img class="img-responsive" src="img/w_instapark/story1.png" title="Click to see enlarged image"/></a>
+        <div class="col-md-6">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/story1.png" target="_blank"><img class="img-responsive" src="img/w_instapark/story1.png" title="Click to see enlarged image"/></a>
+          </div>
         </div>
-        <div class="col-md-6"><a href="img/w_instapark/story2.png" target="_blank"><img class="img-responsive" src="img/w_instapark/story2.png" title="Click to see enlarged image"/></a>
+        <div class="col-md-6">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/story2.png" target="_blank"><img class="img-responsive" src="img/w_instapark/story2.png" title="Click to see enlarged image"/></a>
+          </div>
         </div>
       </div>
     </div>
@@ -201,9 +215,13 @@
     </div>
     <div class="container-fluid showcase">
       <div class="row">
-        <div class="col-md-6"><a href="img/w_instapark/p1.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/p1.jpg" title="Click to see enlarged image"/></a>
+        <div class="col-md-6">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/p1.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/p1.jpg" title="Click to see enlarged image"/></a>
+          </div>
         </div>
-        <div class="col-md-6"><a href="img/w_instapark/p2.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/p2.jpg" title="Click to see enlarged image"/></a>
+        <div class="col-md-6">
+          <div class="card" style="padding:1rem"><a href="img/w_instapark/p2.jpg" target="_blank"><img class="img-responsive" src="img/w_instapark/p2.jpg" title="Click to see enlarged image"/></a>
+          </div>
         </div>
       </div>
     </div>
