Add CSS quizzer

--- a/index.html
+++ b/index.html
@@ -274,7 +274,22 @@
                 <div class="view-case-study0"><span class="view-case-study"><a href="#">View case study</a></span></div>
             </div>
             <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/933x700"></div>
-        </div>        
+        </div>       
+        
+        <!-- CSS Quizzer -->
+        <div class="row home-brief">
+            <div class="col-sm-4 home-project-brief">
+                <p><i class="fa fa-linux"></i></p>                
+                <h5 class="home-project-title"><i class="fa fa-angle-double-right"></i>&nbsp;CSS Quizzer</h5>
+                <h3 class="home-project-subtitle">Developed a web application that quizzes on CSS concepts</h3>
+                <p>I learnt CSS myself through quizzing. I wanted to help others learn CSS the same way. So, I developed a web application using Python Flask and Bootstrap</p>
+                <h6 class="home-project-tags">Python, Flask, Jinja, Bootstrap</h6>
+                <p>Nov'15 - Dec'15</p>                
+                <div class="view-case-study0"><span class="view-case-study"><a href="#">View case study</a></span></div>
+            </div>
+            <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/933x700"></div>
+        </div>       
+        
 
     </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
