Enable css quiz in index

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <div class="col-sm-4 home-project-brief">
                 <p><i class="fa fa-desktop"></i></p>
                 <h5 class="home-project-title"><i class="fa fa-angle-double-right"></i>&nbsp;My portfolio website design</h5>
-                <h3 class="home-project-subtitle">Applying UX principles and front-end development to my portfolio websitet</h3>
+                <h3 class="home-project-subtitle">Applying UX principles and front-end development to my portfolio website</h3>
                 
                 <p>An journey filled with lessons and learnings as I ventured to build a portfolio capturing my work. Experiences in an UX approach to portfolio website design, website creation and front-end development.</p>
                 <h6 class="home-project-tags">HTML, CSS3, SCSS, Jade, Bootstrap v3, Javascript</h6>
@@ -285,7 +285,7 @@
                 <p>I learnt CSS myself through quizzing. I wanted to help others learn CSS the same way. So, I developed a web application using Python Flask and Bootstrap</p>
                 <h6 class="home-project-tags">Python, Flask, Jinja, Bootstrap</h6>
                 <p>Nov'15 - Dec'15</p>                
-                <div class="view-case-study0"><span class="view-case-study"><a href="#">View case study</a></span></div>
+                <div class="view-case-study0"><span class="view-case-study"><a href="cssquiz.html">View case study</a></span></div>
             </div>
             <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/933x700"></div>
         </div>       
