Add shure project

--- a/index.html
+++ b/index.html
@@ -288,7 +288,22 @@
                 <div class="view-case-study0"><span class="view-case-study"><a href="cssquiz.html">View case study</a></span></div>
             </div>
             <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/933x700"></div>
-        </div>       
+        </div>
+        
+        <!-- Shure design jam -->
+        <div class="row home-brief">
+            <div class="col-sm-4 home-project-brief">
+                <p><i class="fa fa-linux"></i></p>                
+                <h5 class="home-project-title"><i class="fa fa-angle-double-right"></i>&nbsp;Shure Design Jam</h5>
+                <h3 class="home-project-subtitle">Make music truly social</h3>
+                <p>Many music apps focus on managing song libraries and listening. Shure wanted a music app that is social to help promote brand awareness of their Sound instruments.</p>
+                <p>We <strong>designed an app in 1.5 hours and won 2nd place!</strong></p>
+                <h6 class="home-project-tags">Idea generator, Paper mockups, Material design</h6>
+                <p>September 2015 - 1.5 hours</p>                
+                <div class="view-case-study0"><span class="view-case-study"><a href="shure.html">View case study</a></span></div>
+            </div>
+            <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/933x700"></div>
+        </div>
         
 
     </div>
