--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <p>There are several untapped opportunities for finding cheap parking spots in Ann Arbor. Parking prices vary through the day at various places and students are eager to rent out their personal spots for some extra money. Unfortunately, no centralized platform exists to make this happen. I built an app to address these needs</p>
                 <h6 class="home-project-tags">ideation, research, design, evaluate</h6>
                 <p>Sep '15 - Dec '15</p>                
-                <div class="view-case-study0"><span class="view-case-study"><a href="#">View case study</a></span></div>
+                <div class="view-case-study0"><span class="view-case-study"><a href="instapark.html">View case study</a></span></div>
             </div>
             <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/933x700"></div>
         </div>
